--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container pt-3">
         <div class="left">
             <form id="form">
-                <label for="">Write your post here</label> <br><br>
+                <label for="">Write your post below</label> <br><br>
                 <textarea name="" id="input" cols="30" rows="10"></textarea>
                 <br><br>
                 <div id="msg"></div>
