--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </form>
         </div>
         <div class="right">
-            <h2>Your post below</h2>
+            <h2>Your post</h2>
             <div id="posts">
                 <div>
                     <p>Hello, this is my first post</p>
